@@ -515,6 +515,8 @@ Release 0.90.5 - Unreleased
   IMPROVEMENT
    HBASE-4205  Enhance HTable javadoc (Eric Charles)
    HBASE-4222  Make HLog more resilient to write pipeline failures
+   HBASE-4293  More verbose logging in ServerShutdownHandler for meta/root
+               cases (todd)
 
 Release 0.90.4 - August 10, 2011
 
